docs: describe the project in README
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>